Fix content out of the container when open sidebar

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -67,8 +67,9 @@
         }
     }
     // Class used to swipe to the top the header on small screen when the user scroll down
+    @include prefix(transition, 'margin-top 0.5s, margin-left 0.5s, width 0.5s', 'webkit' 'moz');
     &.header-up {
-        @include prefix(transform, translate3d(0, -#{map-get($header, height)}, 0), 'webkit' 'moz');
+        margin-top: -#{map-get($header, height)};
     }
 
     // Push the header from the size of the large sidebar
